Add in more meat to portfolio

--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
       <div class="work" id="work">
         <h3 class="heading heading--intro ibm mar-bot--32">Recent work</h3>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
+          <a href="highrise.html" class="work--item">
+            <img src="images/logos/highrise.svg" />
+            <span class="badge">Design challenge</span>
+          </a>
+          <a href="tradesy.html" class="work--item">
+            <img src="images/logos/tradesy.svg" />
+            <span class="badge">Self-service</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
+          <a href="tradesy-m.html" class="work--item">
+            <img src="images/logos/tradesy.svg" />
+            <span class="badge">Mobile web</span>
+          </a>
+          <a href="leagueapps.html" class="work--item">
+            <img src="images/logos/leagueapps.svg" />
+            <span class="badge">Mobile web</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
             <span class="badge">Case Study</span>
