Add in value for projects

--- a/leagueapps.html
+++ b/leagueapps.html
@@ -50,6 +50,10 @@
 
         <h3 class="heading heading--intro ibm mar-bot--32">LeagueApps</h3>
         <h1 class="heading xl ibm mar-bot--32">📱 FTW</h1>
+        <ul class="tldr body ibm mar-bot--32">
+          <li>Increased site performanace by 65%</li>
+          <li>Increased mobile registrations by 127%</li>
+        </ul>
         <p class="body mar-bot--32">The LeagueApps platform served over 16 million views in 2014, and 8 million of them were on a mobile device. So, we optimized the templates and assets to give their mobile users the best possible experience.</p>
         <p class="body mar-bot--32">I also built a custom mobile eCommerce feature which allows members to purchase product(s) associated with that program.</p>
         <p class="body mar-bot--32"><strong>What I did:</strong> User-research, user-testing, prototyping, design, front-end build, JSP integration.</p>
