--- a/sp-onboarding.html
+++ b/sp-onboarding.html
@@ -50,6 +50,9 @@
 
         <h3 class="heading heading--intro ibm mar-bot--32">Simplepractice</h3>
         <h1 class="heading xl ibm mar-bot--32">Better understanding leads to better trials.</h1>
+        <ul class="tldr body ibm mar-bot--32">
+          <li>Increased paid accounts by 25%</li>
+        </ul>
         <p class="body mar-bot--32">I redesigned the trial onboarding experience to drive an <strong><u>increase in paid accounts by 25%</u></strong>. Customers had 30-days free access without a credit to explore and see the value during the trial.</p>
         <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, story writing, prioritization, front-end build, and A/B testing.</p>
       </div>
