--- a/tradesy-m.html
+++ b/tradesy-m.html
@@ -50,6 +50,10 @@
 
         <h3 class="heading heading--intro ibm mar-bot--32">Tradesy</h3>
         <h1 class="heading xl ibm mar-bot--32">Death to the 🍔</h1>
+        <ul class="tldr body ibm mar-bot--32">
+          <li>Increased site engagement by 23%</li>
+          <li>Increased conversions by 8%</li>
+        </ul>
         <p class="body mar-bot--32">Used on over 4.6 million visits since we released in August 2015. I killed the off-canvas menu, and simplified the navigation for our mobile users. The result: increased engagement, but more importantly, conversions.</p>
         <p class="body mar-bot--32">I built a custom registration and login screen to do away with modal windows. These are much more stable and predictable; and lead to better form completion. For the most part, this entaled only chrome edits.</p>
         <p class="body mar-bot--32">Update: I added a new view for accessing your account management, as well as a new view for in-app notifications. Tablet web is also fully supported now, as well.</p>
