--- a/tradesy.html
+++ b/tradesy.html
@@ -50,6 +50,10 @@
 
         <h3 class="heading heading--intro ibm mar-bot--32">Tradesy</h3>
         <h1 class="heading xl ibm mar-bot--32">Self-service overhaul</h1>
+        <ul class="tldr body ibm mar-bot--32">
+          <li>Reduced calls by 17%</li>
+          <li>Increased self-solve by 28%</li>
+        </ul>
         <p class="body mar-bot--32"><strong>The problem:</strong> Getting help on a website can be overwhelming, and often is an afterthought from a design standpoint. At Tradesy, we knew that our current solution (like so many others) was lacking, as well as it was actually creating a bottle neck for our Member Care Team.</p>
         <p class="body mar-bot--32">
           <strong>My solution</strong>
