--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
-            <span class="badge">Case Study</span>
+            <span class="badge">Optimizations</span>
           </a>
           <a href="fyn.html" class="work--item fyn">
             <img src="images/logos/fyn.svg" />
