--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       </div>
       <nav class="nav">
         <a href="#work" class="nav--link">work</a>
-        <a href="#about" class="nav--link">about/contact</a>
+        <a href="#about" class="nav--link">about</a>
         <a href="#my-resume" class="nav--link">résumé</a>
+        <!-- <a href="##" class="nav--link">reviews</a> -->
       </nav>
     </header>
     
@@ -165,8 +166,31 @@
           <a href="https://www.instagram.com/jefffff/" target="_blank" class="btn">Instagram</a>
           <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="btn">Email</a>
         </div>
+        <div class="heading--lite ibm body">
+          <h3 class="heading heading--intro ibm mar-bot--32">My skills</h3>
+          <ul class="skill-list grid grid--2">
+            <li>Product strategy</li>
+            <li>Customer onboarding</li>
+            <li>Jobs-to-be-Done</li>
+            <li>UX design</li>
+            <li>UX research</li>
+            <li>UX writing</li>
+            <li>UI design</li>
+            <li>Business design</li>
+            <li>Growth design</li>
+            <li>Prototyping</li>
+            <li>Usability testing</li>
+            <li>Keyword research</li>
+            <li>Analytics &amp; data</li>
+            <li>A/B testing</li>
+            <li>Figma &amp; prototyping</li>
+            <li>HTML/CSS/JavaScript</li>
+            <li>Ruby/Rails/PHP</li>
+            <li>being a music snob</li>
+          </ul>
+        </div>
         <div id="my-resume" class="my-resume">
-          <h3 class="heading heading--intro ibm mar-bot--32 pad-top--80">Résumé</h3>
+          <h3 class="heading heading--intro ibm mar-bot--32 pad-top--80">My résumé</h3>
           <a href="jeff-doan-resume--2023.pdf" class="resume l ibm">
             <span class="resume-content">
               View PDF
@@ -177,12 +201,13 @@
       </div>
 
       <footer class="footer">
-        <div class="container">
-          <h4 class="heading ibm micro">
-            © jefff.co
-          </h4>
-        </div>
-    </footer>
+          <div class="container">
+            <h4 class="heading ibm micro">
+              © jefff.co
+            </h4>
+          </div>
+      </footer>
+      
     </div>
 
   </body>
