--- a/fyn.html
+++ b/fyn.html
@@ -35,9 +35,10 @@
         made by <strong>Jeff</strong>
       </div>
       <nav class="nav">
-        <a href="index.html#work" class="nav--link">work</a>
-        <a href="index.html#about" class="nav--link">about/contact</a>
-        <a href="index.html#my-resume" class="nav--link">résumé</a>
+        <a href="#work" class="nav--link">work</a>
+        <a href="#about" class="nav--link">about</a>
+        <a href="#my-resume" class="nav--link">résumé</a>
+        <a href="#reviews" class="nav--link">reviews</a>
       </nav>
     </header>
     
