--- a/productboard.html
+++ b/productboard.html
@@ -36,8 +36,9 @@
       </div>
       <nav class="nav">
         <a href="index.html#work" class="nav--link">work</a>
-        <a href="index.html#about" class="nav--link">about/contact</a>
+        <a href="index.html#about" class="nav--link">about</a>
         <a href="index.html#my-resume" class="nav--link">résumé</a>
+        <a href="index.html#reviews" class="nav--link">reviews</a>
       </nav>
     </header>
     
