--- a/index.html
+++ b/index.html
@@ -180,13 +180,15 @@
             <li>Business design</li>
             <li>Growth design</li>
             <li>Prototyping</li>
+            <li>Copywriting &amp; copy testing</li>
             <li>Usability testing</li>
             <li>Keyword research</li>
             <li>Analytics &amp; data</li>
             <li>A/B testing</li>
-            <li>Figma &amp; prototyping</li>
+            <li>Figma</li>
             <li>HTML/CSS/JavaScript</li>
             <li>Ruby/Rails/PHP</li>
+            <li>Scrappy/making sh*t happen</li>
             <li>being a music snob</li>
           </ul>
         </div>
