Add update UI for reviews

--- a/index.html
+++ b/index.html
@@ -206,18 +206,18 @@
 
     <div class="reviews" id="reviews">
       <div class="container">
-        <h3 class="heading heading--intro ibm mar-bot--32">Reviews</h3>
+        <h3 class="heading heading--intro ibm">Reviews</h3>
         <div class="reviews-list">
-          <div class="review--item mar-bot--64">
+          <div class="review--item">
             <h4 class="body heading--lite ibm mar-bot--16">Jeff has an incredible level of both drive and skill. It’s a rare combination that produces incredible results for fast-moving, action-oriented teams that are taking on large, time-sensitive challenges. He understands and cares about all aspects of the product development cycle and is willing to wear any hat when needed.<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.&rdquo;--></h4>
             <p class="body ibm"><strong>Fletcher, Chief Product Officer</strong></p>
           </div>
-          <div class="review--item mar-bot--64">
+          <div class="review--item">
             <h4 class="body heading--lite ibm mar-bot--16">Jeff is more than a skilled product designer; he’s a fantastic communicator, a hardworking colleague, and an absolute joy to be around. He has my highest recommendation and I feel confident that he will bring his unique blend of creativity, passion, and humor to any team.<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.--></h4>
             <p class="body ibm"><strong>Jesse, CTO &amp; Co-Founder</strong></p>
           </div>
           <div class="review--item">
-            <h4 class="body heading--lite ibm mar-bot--16">I had the pleasure of working with Jeff as our first designer at Thriveworks. He’s hands down the most passionate designer I’ve had the opportunity to work with. He cares about the problems, he cares about the users. Jeff's a great utility knife, running user research, putting together prototypes, wireframes, and even coding front-end as-needed. If you’re looking for a lean, mean, high-velocity design machine, it’s Jeff!!<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.--></h4>
+            <h4 class="body heading--lite ibm mar-bot--16">I had the pleasure of working with Jeff as our first designer at Thriveworks. He’s the most passionate designer I’ve worked with. He cares about the problems, he cares about the users. Jeff's a great utility knife, running user research, putting together prototypes, wireframes, and even coding front-end as-needed. If you’re looking for a lean, mean, high-velocity design machine, it’s Jeff!!<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.--></h4>
             <p class="body ibm"><strong>Kabir, Chief Product Officer</strong></p>
           </div>
         </div>
