--- a/tradesy.html
+++ b/tradesy.html
@@ -59,7 +59,7 @@
         <p class="body mar-bot--32">
           <strong>My solution</strong>
           <br />
-          We focussed on designing &amp; building a solution that freed up our Member Care agents to help out our members who really had large issues, and to allow our members with small issues to get the help they needed by themselves, and thus get back to more important things in their lives.
+          We focussed on designing &amp; building a solution that freed up our Member Care agents to help out our members who really had large issues, and to allow our members with small issues to get the help they needed by themselves, and thus get back to more important things in their lives. I led interviews with Member Care agents and customers, and I also led card sorting exercises to figure out how best to restructure the help center categories. 
         </p>
         <p class="body mar-bot--32">
           Using Zendesk&rsquo;s API, we pulled all the content onto our site to create a seamless experience for our members on tradesy.com. If a member is logged in, we can better tailor the types of suggested articles to help them, as well as if they need to contact us, we automatically pass over all the necessary data to our Member Care team without the member needing to do or provide anything else.
@@ -67,7 +67,7 @@
         <p class="body mar-bot--32">
           We also designed and built a new &ldquo;short answer&rdquo; concept that we are truly proud of. A member who has an issue drills down from the new Help homepage into a chosen category, and gets to a list of questions relating to their issue. Inside each question, is a summary of the question (i.e. the short answer), that should be salient enough to answer 99% of our users issues. If it&rsquo;s not, then they can read the full article, or they can then contact us.
         </p>
-        <p class="body mar-bot--32"><strong>What I did:</strong> I led the research, designed and built the front-end, and integrated the API code necessary for this.</p>
+        <p class="body mar-bot--32"><strong>What I did:</strong> I led the user/stakeholder research, card sorting, prototyping &ampl design, front-end build, and back-end integration for the API.</p>
         <a href="more/img/tradesy-self-service.gif" target="_blank" class="btn btn--black ibm">View mobile prototype</a>
       </div>
 
