Add in articles

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <span class="badge">Side project</span>
           </a>
         </div>
-        <div class="work--row mar-bot--80 grid grid--3 grid-gap--32 ibm body">
+        <div class="work--row mar-bot--32 grid grid--3 grid-gap--32 ibm body">
           <a href="https://wtf.jefff.co/coverbetter/" target="_blank" class="work--item mini">
             CoverBetter
             <span class="desc">A re-usable cover letter</span>
@@ -139,6 +139,35 @@
             Interactibles
             <span class="desc">Better interactions for webs</span>
             <span class="badge">Free tool</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--32 grid grid--3 grid-gap--32 ibm body">
+          <a href="https://medium.com/@jefffis/spara-an-atm-for-kids-4c30760e05f9" target="_blank" class="work--item mini">
+            Spara
+            <span class="desc">An ATM for Kids</span>
+            <span class="badge">Article</span>
+          </a>
+          <a href="https://medium.com/@jefffis/pricing-page-updates-7faf76ecd0ba" target="_blank" class="work--item mini">
+            Pricing updates
+            <span class="desc">Design challenge</span>
+            <span class="badge">Article</span>
+          </a>
+          <a href="https://threads.tradesy.com/death-to-the-hamburger-56767d96ca59" target="_blank" class="work--item mini">
+            Death to the 🍔
+            <span class="desc">Musings on UI</span>
+            <span class="badge">Article</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--80 grid grid--2 grid-gap--32 ibm body">
+          <a href="https://medium.com/@jefffis/give-a-shit-design-designers-are-killing-the-web-378772ea696d" target="_blank" class="work--item mini">
+            Give a shit #1
+            <span class="desc">Designers killin&rsquo; the web</span>
+            <span class="badge">Article</span>
+          </a>
+          <a href="https://medium.com/@jefffis/give-a-shit-how-to-not-lose-focus-8a71e96efe89" target="_blank" class="work--item mini">
+            Give a shit #2
+            <span class="desc">How to not lose focus</span>
+            <span class="badge">Article</span>
           </a>
         </div>
         <div class="more-context">
