Add in articles

--- a/index.html
+++ b/index.html
@@ -152,13 +152,18 @@
             <span class="desc">Design challenge</span>
             <span class="badge">Article</span>
           </a>
-          <a href="https://threads.tradesy.com/death-to-the-hamburger-56767d96ca59" target="_blank" class="work--item mini">
+          <a href="https://medium.com/@jefffis/death-to-the-hamburger-56767d96ca59" target="_blank" class="work--item mini">
             Death to the 🍔
             <span class="desc">Musings on UI</span>
             <span class="badge">Article</span>
           </a>
         </div>
-        <div class="work--row mar-bot--80 grid grid--2 grid-gap--32 ibm body">
+        <div class="work--row mar-bot--80 grid grid--3 grid-gap--32 ibm body">
+          <a href="https://medium.com/@jefffis/death-to-the-modals-870223a453d9" target="_blank" class="work--item mini">
+            Death to the modals
+            <span class="desc">Musings on UI</span>
+            <span class="badge">Article</span>
+          </a>
           <a href="https://medium.com/@jefffis/give-a-shit-design-designers-are-killing-the-web-378772ea696d" target="_blank" class="work--item mini">
             Give a shit #1
             <span class="desc">Designers killin&rsquo; the web</span>
