--- a/thriveworks.html
+++ b/thriveworks.html
@@ -50,13 +50,15 @@
         </a>
 
         <h3 class="heading heading--intro ibm mar-bot--32">Thriveworks</h3>
-        <h1 class="heading xl ibm mar-bot--32">Make the clinicians happy and the clients will come.</h1>
+        <h1 class="heading xl ibm mar-bot--32">More clients showing up, better billing, happier clinicians.</h1>
         <ul class="tldr body ibm mar-bot--32">
+          <li>Increased first-session show rate 30%</li>
+          <li>Decreased insurance billing issues 20%</li>
           <li>Reduced clinician churn by 21%</li>
         </ul>
         <p class="body mar-bot--32">A deep-dive case-study on the clinician, client, and call center agent work I led at Thriveworks. Lack of clinician availability was blocking the company from growing, so how might we go about solving this large issue?</p>
         <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
-        <a href="https://www.figma.com/proto/yXQ1itx9eMpDrbX65w7McY/Misc-work?page-id=228%3A78&type=design&node-id=1733-78&viewport=-617%2C-552%2C0.06&scaling=min-zoom&starting-point-node-id=1733%3A78&show-proto-sidebar=1&hide-ui=1" target="_blank" class="btn btn--black ibm">View case study</a>
+        <a #href="https://www.figma.com/proto/yXQ1itx9eMpDrbX65w7McY/Misc-work?page-id=228%3A78&type=design&node-id=1733-78&viewport=-617%2C-552%2C0.06&scaling=min-zoom&starting-point-node-id=1733%3A78&show-proto-sidebar=1&hide-ui=1" target="_blank" class="btn btn--black ibm">Case study coming soon</a>
       </div>
 
     </main>
