Update stats for TW

--- a/thriveworks.html
+++ b/thriveworks.html
@@ -53,6 +53,7 @@
         <h1 class="heading xl ibm mar-bot--32">More clients showing up, better billing, happier clinicians.</h1>
         <ul class="tldr body ibm mar-bot--32">
           <li>Increased first-session show rate 30%</li>
+          <li>Decreased client cancels by 8%</li>
           <li>Decreased insurance billing issues 20%</li>
           <li>Reduced clinician churn by 21%</li>
         </ul>
