Add in new review

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="container">
       
       <div class="hero">
-        <h1 class="heading xl ibm mar-bot--32">I work where strategy, product, marketing, design, data, and technology meet.</h1>
+        <h1 class="heading xl ibm mar-bot--32">I work where strategy, product, marketing, growth, design, data, and technology meet.</h1>
         <p class="body mar-bot--32">As a product designer, I walk the line between empathy for the user, technical constraint, and business value. I’m typically writing in Google Docs, on a call with a customer, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
         <p class="body">I’ve helped businesses reduce churn, increase trial &amp; paid sign ups, optimize feature adoption, set up research &amp; testing processes, create feedback loops, and more. <em>How can I help your business?</em></p>
       </div>
@@ -53,33 +53,13 @@
       <div class="work" id="work">
         <h3 class="heading heading--intro ibm mar-bot--32">Recent work</h3>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="highrise.html" class="work--item">
-            <img src="images/logos/highrise.svg" />
-            <span class="badge">Design challenge</span>
-          </a>
-          <a href="tradesy.html" class="work--item">
-            <img src="images/logos/tradesy.svg" />
-            <span class="badge">Self-service</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="tradesy-m.html" class="work--item">
-            <img src="images/logos/tradesy.svg" />
-            <span class="badge">Mobile web</span>
-          </a>
-          <a href="leagueapps.html" class="work--item">
-            <img src="images/logos/leagueapps.svg" />
-            <span class="badge">Mobile web</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
             <span class="badge">Optimizations</span>
           </a>
-          <a href="fyn.html" class="work--item fyn">
-            <img src="images/logos/fyn.svg" />
-            <span class="badge">Sold 💰</span>
+          <a href="tradesy.html" class="work--item">
+            <img src="images/logos/tradesy.svg" />
+            <span class="badge">Self-service</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
@@ -90,6 +70,26 @@
           <a href="simplepractice.html" class="work--item sp">
             <img src="images/logos/simplepractice.svg" />
             <span class="badge">Growth</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
+          <a href="sp-onboarding.html" class="work--item sys">
+            <img src="images/logos/simplepractice.svg" />
+            <span class="badge">Onboarding/Growth</span>
+          </a>
+          <a href="tradesy-m.html" class="work--item">
+            <img src="images/logos/tradesy.svg" />
+            <span class="badge">Mobile web</span>
+          </a>
+        </div>
+        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
+          <a href="highrise.html" class="work--item">
+            <img src="images/logos/highrise.svg" />
+            <span class="badge">Design challenge</span>
+          </a>
+          <a href="leagueapps.html" class="work--item">
+            <img src="images/logos/leagueapps.svg" />
+            <span class="badge">Mobile web</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
@@ -113,9 +113,9 @@
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="sp-onboarding.html" class="work--item sys">
-            <img src="images/logos/simplepractice.svg" />
-            <span class="badge">Onboarding/Growth</span>
+          <a href="fyn.html" class="work--item fyn">
+            <img src="images/logos/fyn.svg" />
+            <span class="badge">Sold 💰</span>
           </a>
           <a href="https://wtf.jefff.co/getbetalist/" target="_blank" class="work--item bl">
             <img src="images/logos/betalist.svg" />
@@ -253,6 +253,10 @@
           <div class="review--item">
             <h4 class="body heading--lite ibm mar-bot--16">I had the pleasure of working with Jeff as our first designer at Thriveworks. He’s the most passionate designer I’ve worked with. He cares about the problems, he cares about the users. Jeff's a great utility knife, running user research, putting together prototypes, wireframes, and even coding front-end as-needed. If you’re looking for a lean, mean, high-velocity design machine, it’s Jeff!!<!--His breadth of perspectives enables him with an intuitive and valuable sense for balancing speed, scope, business value, customer value, risk, and quality when iterating and creating software.--></h4>
             <p class="body ibm"><strong>Kabir, Chief Product Officer</strong></p>
+          </div>
+          <div class="review--item">
+            <h4 class="body heading--lite ibm mar-bot--16">I highly recommend Jeff for UI design projects. His expertise in Figma, attention to detail, and ability to create intuitive interfaces make him a valuable asset. Jeff's designs are visually appealing, modern, and user-friendly. He is a great communicator, collaborator, and consistently delivers high-quality work within deadlines. I highly recommend Jeff for any project that requires top-notch UI design skills, especially in Figma.</h4>
+            <p class="body ibm"><strong>Mathew, Full-stack Engineer</strong></p>
           </div>
         </div>
       </div>
