--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
       
       <div class="hero">
         <h1 class="heading xl ibm mar-bot--32">I work where strategy, product, marketing, growth, design, data, and technology meet.</h1>
-        <p class="body mar-bot--32">As a product designer, I walk the line between empathy for the user, technical constraint, and business value. I’m typically writing in Google Docs, on a call with a customer, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
+        <p class="body mar-bot--32">As a product designer, I walk the line between empathy for the user, technical constraint, and business value. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
         <p class="body">I’ve helped businesses reduce churn, increase trial &amp; paid sign ups, optimize feature adoption, set up research &amp; testing processes, create feedback loops, and more. <em>How can I help your business?</em></p>
       </div>
 
       <div class="work" id="work">
         <h3 class="heading heading--intro ibm mar-bot--32">Recent work</h3>
+        <div class="work--row mar-bot--32">
+          <a href="healme.html" class="work--item healme">
+            <img src="images/logos/healme.svg" height="80" />
+            <span class="badge">Optimizations/Growth</span>
+          </a>
+        </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
