--- a/healme.html
+++ b/healme.html
@@ -58,8 +58,8 @@
           <li>Lead strategy, research, and design for new features (0-1 🚀)</li>
         </ul>
         <p class="body mar-bot--32">Heal.me is an all-in-one toolkit for holistic practitioners to run their businesses. It&rsquo;s a marketplace for clients to explore and book with thousands of practioners. I&rsquo;ve been leading the design and product efforts to drive more adoption of the saas product while improving the SEO and UX flows for more clients to book flawlessly.</p>
-        <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy, service design and more.</p>
-        <!-- <a #href="https://www.figma.com/proto/yXQ1itx9eMpDrbX65w7McY/Misc-work?page-id=228%3A78&type=design&node-id=1733-78&viewport=-617%2C-552%2C0.06&scaling=min-zoom&starting-point-node-id=1733%3A78&show-proto-sidebar=1&hide-ui=1" target="_blank" class="btn btn--black ibm">Case study coming soon</a> -->
+        <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy &amp; prioritization, and more.</p>
+        <a class="btn btn--black ibm">Case study coming soon</a>
       </div>
 
     </main>
