--- a/index.html
+++ b/index.html
@@ -210,22 +210,24 @@
         <div class="heading--lite ibm body">
           <h3 class="heading heading--intro ibm mar-bot--32">My skills</h3>
           <ul class="skill-list grid grid--2">
-            <li>Product strategy</li>
-            <li>Customer onboarding</li>
-            <li>Jobs-to-be-Done</li>
+            <li>Product design</li>
             <li>UX design</li>
+            <li>Design systems &amp; components</li>
+            <li>Product strategy &amp; prioritization</li>
+            <li>Presenting &amp; critique</li>
             <li>UX research</li>
             <li>UX writing</li>
             <li>UI design</li>
             <li>Business design</li>
             <li>Growth design</li>
             <li>Prototyping</li>
+            <li>Jobs-to-be-Done</li>
             <li>Copywriting &amp; copy testing</li>
             <li>Usability testing</li>
             <li>Keyword research</li>
             <li>Analytics &amp; data</li>
             <li>A/B testing</li>
-            <li>Figma</li>
+            <li>Figma &amp; Storybook</li>
             <li>HTML/CSS/JavaScript</li>
             <li>Ruby/Rails/PHP</li>
             <li>Scrappy/making sh*t happen</li>
