--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <main class="container">
       
       <div class="hero">
-        <h1 class="heading xl ibm mar-bot--32">I work where strategy, product, marketing, growth, design, data, and technology meet.</h1>
-        <p class="body mar-bot--32">As a product designer, I walk the line between empathy for the user, technical constraint, and business value. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
+        <h1 class="heading xl ibm mar-bot--32">I design for where people, strategy, product, marketing, data, and technology meet.</h1>
+        <p class="body mar-bot--32">I enjoy designing for conversion, driving customer & business value, optimizing onboarding to be effective, and simplifying pains with better tooling. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
         <p class="body">I’ve helped businesses reduce churn, increase trial &amp; paid sign ups, optimize feature adoption, set up research &amp; testing processes, create feedback loops, and more. <em>How can I help your business?</em></p>
       </div>
 
@@ -194,7 +194,7 @@
       <div class="container">
         <h3 class="heading heading--intro ibm mar-bot--32">About me</h3>
         <h2 class="heading ibm l mar-bot--32">
-          I’m a Denver-based nerd, product designer, developer, bad drummer & synth player, and father. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP). In my career, I’ve worked across B2C, B2B, SaaS, and mental health. I enjoy designing for conversion, driving customer &amp; business value, optimizing onboarding to be effective, and simplifying pains with better tooling.
+          I’m a product designer that solves customer and business problems with simple, efficient tooling, and I excel at taking an idea from 0 to usable thing. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP). In my career, I’ve worked across B2C, B2B, SaaS, and mental health.
         </h2>
         <h3 class="heading--lite ibm body mar-bot--40">
           I have a passion for using technology to do good, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
