--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
         <div id="my-resume" class="my-resume">
           <h3 class="heading heading--intro ibm mar-bot--32 pad-top--80">My résumé</h3>
-          <a href="jeff-doan-resume.pdf" class="resume l ibm">
+          <a href="jeff-doan-resume--2024.pdf" class="resume l ibm">
             <span class="resume-content">
               View PDF
               <img src="images/arrow-right.svg" class="resume-content--icon" />
